--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,10 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
     working_directory: ~/repo
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/golang:1.15.8
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: cimg/go:1.20.2
     steps:
       - checkout
       - restore_cache:
@@ -26,17 +18,43 @@ jobs:
           paths:
             - "/go/pkg/mod"
       - run:
+          name: Build the go program
+          command: go build
+  test:
+    working_directory: ~/repo
+    docker:
+      - image: cimg/go:1.20.2
+    steps:
+      - run:
+          name: Check folder
+          command: ls -lsh
+      - run:
           name: Run tests
           command: |
             mkdir -p /tmp/test-reports
             gotestsum --junitfile /tmp/test-reports/unit-tests.xml
       - store_test_results:
           path: /tmp/test-reports
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - run:
+            name: Deploy over SSH to whatbox
+            command: |
+              ssh $SSH_USER@$SSH_HOST "cp ./toi-scraper /home/shyamsundar2007/personal/"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build-and-deploy:
     jobs:
       - build
+      - test:
+          requires:
+            - build
+      - deploy:
+          requires:
+            - build
+            - test
+          filters:
+            branches:
+              only: main
